Fix: Prevent collapse from preview box

--- a/Resources/Public/Plugin.css
+++ b/Resources/Public/Plugin.css
@@ -52,7 +52,6 @@
 .x47corl:not(#\#):not(#\#):not(#\#){pointer-events:none}
 .x1n2onr6:not(#\#):not(#\#):not(#\#){position:relative}
 .xdpxx8g:not(#\#):not(#\#):not(#\#){text-align:left}
-.x1sect9i:not(#\#):not(#\#):not(#\#){text-ellipsis:ellipsis}
 .xlyipyv:not(#\#):not(#\#):not(#\#){text-overflow:ellipsis}
 .x1v0jg1i:not(#\#):not(#\#):not(#\#){transform:var(--transform,revert)}
 .xuxw1ft:not(#\#):not(#\#):not(#\#){white-space:nowrap}
@@ -69,6 +68,7 @@
 .xpdco3j:not(#\#):not(#\#):not(#\#):not(#\#){height:var(--xum5wse)}
 .x15635tz:not(#\#):not(#\#):not(#\#):not(#\#){margin-left:calc(var(--xsq42wm) * -1)}
 .xyxxu3c:not(#\#):not(#\#):not(#\#):not(#\#){margin-top:var(--x27mn02)}
+.x775x8:not(#\#):not(#\#):not(#\#):not(#\#){max-height:var(--x12rwxsh)}
 .x1q6vwdj:not(#\#):not(#\#):not(#\#):not(#\#){min-height:var(--x12rwxsh)}
 .x1yxg6fv:not(#\#):not(#\#):not(#\#):not(#\#){min-width:var(--x12dtnal)}
 .x1fyu0iq:not(#\#):not(#\#):not(#\#):not(#\#){min-width:var(--x12rwxsh)}
